# RAGProject

./: .dockerignore  .gitignore  Dockerfile  README.md  ideas.md  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
config/: config.example.py
k8s/: deployment.yaml  service.yaml
src/api/: main.py
src/app/rag_ingestion/: base_loader.py  chunk_strategies.py  embedding_service.py  ingestion_pipeline.py  vectordb_factory.py
src/app/rag_pipeline/: context_builder.py  llm_service.py  observability.py  prompt_builder.py  query_understanding.py  rag_pipeline_orc.py  reranker.py  retriever.py
tests/: conftest.py  test_api.py  test_context_builder.py  test_observability.py  test_prompt_builder.py  test_query_understanding.py
