[project]
name = "bookragproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "ollama>=0.6.1",
    "pymupdf>=1.27.1",
    "sentence-transformers>=5.2.3",
    "uvicorn>=0.41.0",
]
